--- a/formboot.html
+++ b/formboot.html
@@ -23,9 +23,9 @@
 
 <body>
     <div class=" container">
-        <form class="row g-3 needs-validation" novalidate>
+        <form class="row g-3 needs-validation margin-auto" novalidate>
             <h4 class="text-center mt-5"> Sign in To register</h4>
-            <div class="col-6">
+            <div class="col-md-6">
                 <label for="input1" class="form-label">Surname</label>
                 <div class="input-group has-validation">
 
@@ -37,37 +37,92 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
                 <label for="input2" class="form-label">Middle-name</label>
                 <div class="input-group has-validation">
                     <span class="input-group-text" id="inputGroupPrepend"><i class="fas fa-file-signature"></i></span>
-                    <input type="text" class="form-control" placeholder="Middle-name" id="validationname" aria-required="true">
+                    <input type="text" class="form-control" placeholder="Middle-name" id="validationname"
+                        aria-required="true" required>
+                    <div class="invalid-feedback">
+                        middle-name required
+                    </div>
                 </div>
 
             </div>
-            <div class="c0l-12">
+            <div class="c0l-md-12">
                 <label for="input3" class="form-label">Username</label>
                 <div class="input-group has-validation">
                     <span class="input-group-text" id="inputgroup"> <i class="fas fa-user icon"></i></span>
                     <input type="text" class="form-control" placeholder="username" id="valdationusername" required>
+                    <div class="invalid-feedback">
+                        user-name required
+                    </div>
 
                 </div>
 
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
                 <label for="input3">Phone Number</label>
                 <div class="input-group has validation">
                     <span class="input-group-text" id="inputgroup"><i class="fas fa-phone-alt"></i></span>
                     <input type="number" class="form-control" placeholder="phone-number" id="validationnumber" required>
+                     <div class="invalid-feedback">
+                        user-name required
+                    </div>
+
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
                 <label for="input4"> Valid-Email</label>
                 <div class="input-group has validation">
-                    <span class="input-group-text" id="inputgroup"><i class="fas fa-envelope-open-text"></i></span> 
+                    <span class="input-group-text" id="inputgroup"><i class="fas fa-envelope-open-text"></i></span>
                     <input type="email" class="form-control" placeholder=" Valid email" id="validationemail" required>
+                    <div class="invalid-feedback">
+                        user-name required
+                    </div>
+
                 </div>
 
+            </div>
+            <div class="col-md-6">
+                <label for="input5"> Create password</label>
+                <div class="input-group has validation">
+                    <span class="input-group-text" id="inputgroup"><i class="fas fa-unlock-alt"></i></span>
+                    <input type="password" class="form-control" placeholder=" enter password" id="validationemail"
+                        required>
+                        <div class="invalid-feedback">
+                            user-name required
+                        </div>
+    
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label for="input5">Confirm password</label>
+                <div class="input-group has validation">
+                    <span class="input-group-text" id="inputgroup"><i class="fas fa-unlock-alt"></i></span>
+                    <input type="password" class="form-control" placeholder=" enter password" id="validationemail"
+                        required>
+                        <div class="invalid-feedback">
+                            user-name required
+                        </div>
+    
+                </div>
+            </div>
+
+            <div class="col-md-12">
+                <div class="form-check">
+
+                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                    <label class="form-check-label" for="invalidCheck"> I agree to Terms and conditions</label>
+                    <div class="invalid-feedback">
+                        please agree to policy
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-md-12">
+                <button class="btn btn-primary " type="submit">Submit form</button>
             </div>
 
         </form>
